- unbreak kernel orphans management (broken by #53425 fix)
- improve messages asking to restart system/session (#53126)
- add --download-all option to download all packages before attempting
  to start installation
- fix priviledge escalation in rurpmi and rurpme (#54568)

Version 6.29 - 5 October 2009

- downgrade skipped package log message to debug message
- make sure we don't check certificate in aria2 except when we want to
- exclude kernel-source from orphan processing (#53426)
- do not list as orphans kernel packages which where not installed through
  dependencies (#53425)

Version 6.28.1 - 3 September 2009

- prevent creating empty "/url" (#53097)

Version 6.28 - 31 August 2009

- urpmi.addmedia:
  o use https when downloading the mirror list from api.mandriva.com, and 
- orphans handling
  o do not offer to remove current kernel (even if it's not a official
    kernel
  o offer to remove old kernels (excluding the running one)
    (also do not do anything regarding kernels if we failed to detect
    the running one (ie: chroot))

Version 6.27.1 - 18 August 2009

- make sure error messages are displayed (was broken as part of fix #50776)
- don't attempt to expand empty URLs, fixes bug #52860
- append a reason to api.mandriva.com queries when we are doing it because
  the cache is outdated

Version 6.27 - 13 August 2009

- prevent garbaging text installer screen (#50776)
- urpmq:
  o -a option was ignored when using --src (fixes #52672)
- urpmi.addmedia:
  o properly expand $RELEASE, $ARCH and $HOST in media URLs (fixes #52276)
  o add support for /etc/urpmi/mediacfg.d which stores the media.cfg files 
    for the media entries in urpmi.cfg

Version 6.26.1 - 31 July 2009

-urpmi
  o minor dudf fixes

Version 6.26 - 30 July 2009

- urpmi.addmedia:
  o properly invalidate mirror cache when the distro version changes 
    (ie when product.id changes). Fixes bug #52133, patch from
    Aurélien Lefebvre
- urpmi: