@@ -3,6 +3,8 @@
 - add --download-all option to download all packages before attempting
   to start installation
 - fix priviledge escalation in rurpmi and rurpme (#54568)
+- when the database is locked, print the PID of the processus locking it
+ (#38923, Pascal Terjan)
 
 Version 6.29 - 5 October 2009
 
